--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "plugins.jquery.com",
   "version": "0.0.1",
   "description": "Static archive of plugins.jquery.com, built with eleventy.",
+  "type": "module",
   "scripts": {
     "clean": "rimraf _site/",
-    "build": "npx @11ty/eleventy",
-    "postbuild": "npm run searchindex",
-    "start": "npm run clean && cross-env NODE_ENV=development npx @11ty/eleventy --serve --quiet",
+    "build": "cross-env ELEVENTY_PRODUCTION=true npx @11ty/eleventy",
+    "postbuild": "npm run searchindex && cross-env NODE_ENV=production npm run tailwind -- --minify",
+    "start": "npm run clean && bash dev.sh",
     "debug": "npm run clean && cross-env NODE_ENV=development DEBUG=Eleventy* npx @11ty/eleventy",
-    "debugstart": "npm run clean && cross-env NODE_ENV=development DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
     "benchmark": "npm run clean && cross-env NODE_ENV=development DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
     "searchindex": "pagefind",
+    "tailwind": "tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o public/style.css",
     "testbuild": "npm run clean && cross-env NODE_ENV=development npx @11ty/eleventy && npm run searchindex"
   },
   "repository": {
@@ -37,17 +38,17 @@
   "homepage": "https://github.com/jquery/plugins.jquery.com#readme",
   "devDependencies": {
     "@11ty/eleventy": "github:11ty/eleventy",
-    "@11ty/eleventy-img": "^3.1.1",
+    "@11ty/eleventy-img": "^3.1.8",
     "@11ty/eleventy-navigation": "^0.3.5",
-    "@11ty/eleventy-plugin-bundle": "^1.0.4",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-    "clean-css": "^5.3.2",
     "cross-env": "^7.0.3",
     "eleventy-favicon": "^1.1.3",
     "luxon": "^3.4.3",
     "pagefind": "^1.0.3",
     "prettier": "^3.0.3",
-    "rimraf": "^5.0.5"
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "rimraf": "^5.0.5",
+    "tailwindcss": "^3.3.5"
   },
   "overrides": {
     "sharp": "^0.32.1"
