--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "npm run clean && cross-env NODE_ENV=development DEBUG=Eleventy* npx @11ty/eleventy",
     "benchmark": "npm run clean && cross-env NODE_ENV=development DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
     "searchindex": "pagefind",
-    "tailwind": "tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o public/style.css",
+    "tailwind": "tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css",
     "testbuild": "npm run clean && cross-env NODE_ENV=development npx @11ty/eleventy && npm run searchindex"
   },
   "repository": {
@@ -43,9 +43,9 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "cross-env": "^7.0.3",
     "eleventy-favicon": "^1.1.3",
-    "luxon": "^3.4.3",
-    "pagefind": "^1.0.3",
-    "prettier": "^3.0.3",
+    "luxon": "^3.4.4",
+    "pagefind": "^1.0.4",
+    "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.3.5"
