--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "cross-env": "^7.0.3",
     "eleventy-favicon": "^1.1.3",
+    "lodash-es": "^4.17.21",
     "luxon": "^3.4.4",
     "pagefind": "^1.0.4",
     "prettier": "^3.1.0",
