--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "eleventy-favicon": "^1.1.3",
     "lodash-es": "^4.17.21",
     "luxon": "^3.4.4",
