--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           NODE_ENV: production
           NODE_OPTIONS: '--max_old_space_size=4096'
-        run: npm run build
+        run: npm run build -- --pathprefix="/plugins.jquery.com/"
 
       - name: Push to branch
         # Inspired by https://github.com/helaili/jekyll-action/blob/2.2.0/entrypoint.sh
