--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run clean && bash dev.sh",
     "debug": "npm run clean && cross-env NODE_ENV=development DEBUG=Eleventy* npx @11ty/eleventy",
     "benchmark": "npm run clean && cross-env NODE_ENV=development DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
-    "searchindex": "pagefind",
+    "searchindex": "node pagefind/generate.js",
     "tailwind": "tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css",
     "testbuild": "npm run clean && cross-env NODE_ENV=development npx @11ty/eleventy && npm run searchindex"
   },
@@ -30,7 +30,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=14"
+    "node": ">=20"
   },
   "bugs": {
     "url": "https://github.com/jquery/plugins.jquery.com/issues"
@@ -45,12 +45,12 @@
     "dotenv": "^16.4.5",
     "eleventy-favicon": "^1.1.3",
     "lodash-es": "^4.17.21",
-    "luxon": "^3.4.4",
-    "pagefind": "^1.1.0",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.3"
+    "luxon": "^3.5.0",
+    "pagefind": "^1.1.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.13"
   },
   "overrides": {
     "sharp": "^0.32.1"
